imclient/marslib/include/WFClient.h



//general function callback
typedef void (WFCAPI *fun_general_void_success_callback)(void *pObject, int objectDataType);

typedef void (WFCAPI *fun_general_string_success_callback)(void *pObject, int objectDataType, const char *cval, size_t val_len);

typedef void (WFCAPI *fun_general_error_callback)(void *pObject, int objectDataType, int errorCode);


extern "C" PROTOWRAPPER_API void WFCAPI modifyGroupAlias(const char *cgroupId, size_t groupId_len, const char *cnewAlias, size_t newAlias_len, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI modifyGroupMemberAlias(const char *cgroupId, size_t groupId_len, const char *cmemberId, size_t memberId_len, const char *cnewAlias, size_t newAlias_len, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI modifyGroupMemberExtra(const char *cgroupId, size_t groupId_len, const char *cmemberId, size_t memberId_len, const char *cnewExtra, size_t newExtra_len, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI transferGroup(const char *cgroupId, size_t groupId_len, const char *cnewOwner, size_t newOwner_len, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);



extern "C" PROTOWRAPPER_API void WFCAPI setGroupManager(const char *cgroupId, size_t groupId_len, bool isSet, const char** cusers, const size_t* userLengths, size_t userCount, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);

extern "C" PROTOWRAPPER_API void WFCAPI muteGroupMember(const char *cgroupId, size_t groupId_len, bool isSet, const char** cusers, const size_t* userLengths, size_t userCount, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);

extern "C" PROTOWRAPPER_API void WFCAPI allowGroupMember(const char *cgroupId, size_t groupId_len, bool isSet, const char** cusers, const size_t* userLengths, size_t userCount, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getFavGroups(size_t *retlen);



extern "C" PROTOWRAPPER_API void WFCAPI getMyGroups(fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getCommonGroups(const char *cuserId, size_t userId_len, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getUserSetting(int scope, const char *ckey, size_t key_len, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getUserSettings(int scope, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI setUserSetting(int scope, const char *ckey, size_t key_len, const char *cvalue, size_t value_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);



extern "C" PROTOWRAPPER_API bool WFCAPI isFavGroup(const char *cgroupId, size_t groupId_len);


extern "C" PROTOWRAPPER_API void WFCAPI setFavGroup(const char *cgroupId, size_t groupId_len, bool fav, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isUserEnableReceipt();

extern "C" PROTOWRAPPER_API void WFCAPI setUserEnableReceipt(bool enable, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);



extern "C" PROTOWRAPPER_API const char* WFCAPI getFavUsers(size_t *retlen);

extern "C" PROTOWRAPPER_API bool WFCAPI isFavUser(const char *cuserId, size_t userId_len);

extern "C" PROTOWRAPPER_API void WFCAPI setFavUser(const char *cuserId, size_t userId_len, bool fav, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);