imclient/lib/src/ffi/wfclient_bindings.dart


  late final void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) modifyGroupAlias =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('modifyGroupAlias');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) modifyGroupMemberAlias =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('modifyGroupMemberAlias');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) modifyGroupMemberExtra =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('modifyGroupMemberExtra');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) transferGroup =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('transferGroup');

  late final void Function(Pointer<Char>, int, bool, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setGroupManager =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Bool, Pointer<Pointer<Char>>, Pointer<Size>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, bool, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setGroupManager');

  late final void Function(Pointer<Char>, int, bool, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) muteGroupMember =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Bool, Pointer<Pointer<Char>>, Pointer<Size>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, bool, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('muteGroupMember');

  late final void Function(Pointer<Char>, int, bool, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) allowGroupMember =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Bool, Pointer<Pointer<Char>>, Pointer<Size>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, bool, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('allowGroupMember');

  late final Pointer<Char> Function(Pointer<Size>) getFavGroups =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getFavGroups');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getMyGroups =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getMyGroups');

  late final void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getCommonGroups =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getCommonGroups');

  late final Pointer<Char> Function(int, Pointer<Char>, int, Pointer<Size>) getUserSetting =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, Pointer<Size>)>('getUserSetting');

  late final Pointer<Char> Function(int, Pointer<Size>) getUserSettings =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Size>), Pointer<Char> Function(int, Pointer<Size>)>('getUserSettings');

  late final void Function(int, Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setUserSetting =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setUserSetting');

  late final bool Function(Pointer<Char>, int) isFavGroup =
      _lib.lookupFunction<Bool Function(Pointer<Char>, Size), bool Function(Pointer<Char>, int)>('isFavGroup');

  late final void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setFavGroup =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setFavGroup');

  late final bool Function() isUserEnableReceipt =
      _lib.lookupFunction<Bool Function(), bool Function()>('isUserEnableReceipt');

  late final void Function(bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setUserEnableReceipt =
      _lib.lookupFunction<Void Function(Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setUserEnableReceipt');

  late final Pointer<Char> Function(Pointer<Size>) getFavUsers =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getFavUsers');

  late final bool Function(Pointer<Char>, int) isFavUser =
      _lib.lookupFunction<Bool Function(Pointer<Char>, Size), bool Function(Pointer<Char>, int)>('isFavUser');

  late final void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setFavUser =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setFavUser');
